fix ligiatures when using letter spacing in chrome

--- a/src/_assets/sass/05_elements/_elements.page.scss
+++ b/src/_assets/sass/05_elements/_elements.page.scss
@@ -10,6 +10,10 @@ html {
     color $theme-transition;
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 1em;
+  font-feature-settings:
+    "kern" 1,
+    "liga" 1,
+    "calt" 1;
   line-height: 1.55;
   font-weight: 425;
   overflow-y: scroll; /* [2] */
