--- a/src/_assets/sass/06_objects/_objects.wrapper.scss
+++ b/src/_assets/sass/06_objects/_objects.wrapper.scss
@@ -5,7 +5,7 @@
 .o-wrapper {
   margin-left: auto;
   margin-right: auto;
-  max-width: calc(720px + var(--site-margin) * 2);
+  max-width: calc(#{rem(720px)} + var(--site-margin) * 2);
   padding-left: var(--site-margin);
   padding-right: var(--site-margin);
 }
